--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,19 @@
 }
 
 body {
-  width: 100%;
-  background: lightgray;
-  background-image: url(../photos/bg.jpg);
+  max-width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-transition: smooth;
+  /* -webkit-transition: smooth; */
   transition: smooth;
 }
 
 .container {
-  min-width: 100%;
+  width: 100%;
   display: block;
   padding-bottom: 40px;
+  backdrop-filter: blur(10px);
   background-color: lightgreen;
 }
 
@@ -35,13 +34,13 @@ body {
 
 .container #myInput:hover {
   opacity: 100%;
-  -webkit-transition: all 0.2s ease-in-out;
+  /*  -webkit-transition: all 0.2s ease-in-out;*/
   transition: all 0.2s ease-in-out;
 }
 
 .container #myInput:focus {
   opacity: 100%;
-  -webkit-transition: all 0.2s ease-in-out;
+  /*  -webkit-transition: all 0.2s ease-in-out; */
   transition: all 0.2s ease-in-out;
 }
 
@@ -49,31 +48,31 @@ body {
   list-style: none;
   width: 100%;
   max-width: 900px;
-  display: -ms-grid;
+  /* display: -ms-grid; */
   display: grid;
   gap: 15px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  /*   -ms-grid-columns: (minmax(200px, 1fr)) [auto-fit]; */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   /*  width*/
-  -ms-grid-rows: (1fr)[auto-fit];
-      grid-template-rows: repeat(auto-fit, 1fr);
+  /*  -ms-grid-rows: (1fr) [auto-fit]; */
+  grid-template-rows: repeat(auto-fit, 1fr);
   /* height*/
   margin: 0px auto;
 }
 
 img[class^="image-"] {
-  display: -ms-grid;
+  /* display: -ms-grid; */
   display: grid;
   margin: 0 auto;
   border: 1px solid magenta;
-  -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  /*   -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); */
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 img[class^="image-"]:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: all 0.2s cubic-bezier(0.17, -0.2, 0.86, 1.2);
+  /*  -webkit-transform: scale(1.1); */
+  transform: scale(1.1);
+  /*  -webkit-transition: all 0.2s cubic-bezier(0.17, -0.2, 0.86, 1.2); */
   transition: all 0.2s cubic-bezier(0.17, -0.2, 0.86, 1.2);
 }
 
